test/classes/generic/badFieldExprs/bad-default-expr.value.good
bad-default-expr.chpl:20: error: error while resolving type 'BadValueDefault'
bad-default-expr.chpl:21: note: field 'x' has a default expression that resolves to a type
